--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+log/
+install/
 devel/
 logs/
 build/
@@ -24,7 +26,7 @@ devel_isolated/
 # Ignore generated docs
 *.dox
 *.wikidoc
-
+/
 # eclipse stuff
 .project
 .cproject
